实现 Trinity 接入仓聚合租约